# cmake-template

./: .clang-format  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
modern/include/: modern.h
modern/src/: modern.cpp
modern/tests/first_test/: CMakeLists.txt
modern/tests/second_test/: CMakeLists.txt
src/: CMakeLists.txt
src/modern/: CMakeLists.txt
src/modern/include/: modern.h
src/modern/tests/first_test/: CMakeLists.txt  first_test.cpp
src/modern/tests/second_test/: CMakeLists.txt  second_test.cpp
tests/: CMakeLists.txt
tests/first_test/: CMakeLists.txt
tests/second_test/: CMakeLists.txt
